# catdetector

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  catdetector.py  datasets.py  evaluate.py  main.py  models.py  prepare_dataset.py  pyproject.toml  requirements.txt  test_evaluate.py  trainer.py
apps/catdetector-api/: pyproject.toml
apps/catdetector-api/src/catdetector_api/: __init__.py  dependencies.py  inference.py  main.py  observability.py  routes.py  settings.py
apps/catdetector-api/tests/catdetector_api_tests/: test_health.py  test_inference.py  test_predictions.py  test_static_frontend.py
apps/catdetector-trainer/: pyproject.toml
apps/catdetector-trainer/src/catdetector_trainer/: catdetector.py  evaluate.py  models.py  trainer.py
apps/catdetector-web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/catdetector-web/src/: App.svelte  App.test.ts  app.css
apps/catdetector_api/: pyproject.toml
apps/catdetector_api/src/catdetector_api/: __init__.py  dependencies.py  inference.py  main.py  predictions.py  routes.py
apps/catdetector_api/tests/catdetector_api_tests/: test_health.py  test_inference.py  test_predictions.py  test_static_frontend.py
apps/catdetector_trainer/: pyproject.toml
apps/catdetector_trainer/src/catdetector_trainer/: __init__.py
apps/catdetector_trainer/tests/catdetector_trainer_tests/: test_evaluate.py
apps/catdetector_web/: index.html  package-lock.json  package.json  tsconfig.json
apps/catdetector_web/tests/: main.test.mjs
docs/superpowers/plans/: 2026-06-13-phone-prediction-app.md
docs/superpowers/specs/: 2026-06-13-phone-prediction-app-design.md
