[project]
name = "catdetector"
version = "0.1.0"
description = "Cat Detector: A PyTorch Lightning-based image classification model for detecting Vickie and Oka in images."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "efficientnet-pytorch>=0.7.1",
    "lightning>=2.6.5",
    "lightning-utilities>=0.15.3",
    "pytorch-lightning>=2.6.5",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = ["ruff>=0.15.16", "taskipy>=1.14.1", "ty>=0.0.44"]


[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.taskipy.tasks]
train = "python -m catdetector.train"
evaluate = "python -m catdetector.evaluate"
format = "ruff format ."
check_ruff = "ruff check ."
check_ty = "ty check ."
check = "task check_ruff && task check_ty"
