[project]
name = "catdetector"
version = "0.1.0"
description = "Cat Detector monorepo workspace."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catdetector-api",
    "catdetector-trainer",
]

[dependency-groups]
dev = ["ruff>=0.15.16", "taskipy>=1.14.1", "ty>=0.0.44"]

[tool.uv.workspace]
members = ["apps/*"]

[tool.uv.sources]
catdetector-api = { workspace = true }
catdetector-trainer = { workspace = true }
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.taskipy.tasks]
train = "catdetector-train"
evaluate = "catdetector-evaluate"
predict = "catdetector-predict"
api = "catdetector-api"
test_trainer = "python -m unittest discover -s apps/catdetector_trainer/tests"
test_api = "python -m unittest discover -s apps/catdetector_api/tests"
test = "task test_trainer && task test_api"
format = "ruff format ."
check_ruff = "ruff check ."
check_ty = "ty check ."
check = "task check_ruff && task check_ty && task test"
