[project]
name = "catdetector"
version = "0.1.0"
description = "Cat Detector monorepo workspace."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catdetector-api",
    "catdetector-model",
    "catdetector-trainer",
]

[dependency-groups]
dev = ["ruff>=0.15.16", "taskipy>=1.14.1", "ty>=0.0.44"]

[tool.uv.workspace]
members = [
    "apps/catdetector-api",
    "apps/catdetector-trainer",
    "packages/catdetector-model",
]

[tool.uv.sources]
catdetector-api = { workspace = true }
catdetector-model = { workspace = true }
catdetector-trainer = { workspace = true }
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.taskipy.tasks]
train = "catdetector-train"
evaluate = "catdetector-evaluate"
predict = "catdetector-predict"
api = "catdetector-api"
test_model = "python -m unittest discover -s packages/catdetector-model/tests"
test_api = "python -m unittest discover -s apps/catdetector-api/tests"
test_trainer = "python -m unittest discover -s apps/catdetector-trainer/tests"
test = "task test_model && task test_trainer && task test_api"
format = "ruff format ."
check_ruff = "ruff check ."
check_ty = "ty check ."
check = "task check_ruff && task check_ty && task test"
api_dev = "catdetector-api"
api_start = "catdetector-api"
web_dev = "npm.cmd --prefix apps/catdetector-web run dev"
web_start = "npm.cmd --prefix apps/catdetector-web run dev"
web_build = "npm.cmd --prefix apps/catdetector-web run build"
web_preview = "npm.cmd --prefix apps/catdetector-web run preview"
web_test = "npm.cmd --prefix apps/catdetector-web run test"
web_check = "npm.cmd --prefix apps/catdetector-web run check"
docker_build = "docker build -t catdetector ."
docker_build_cpu = "docker build --build-arg UV_TORCH_BACKEND=cpu -t catdetector:cpu ."
