[project]
name = "catdetector-api"
version = "0.1.0"
description = "FastAPI service package for Cat Detector."
requires-python = ">=3.14"
dependencies = [
    "catdetector-model",
    "fastapi>=0.124.0",
    "granian>=2.6.0",
    "httpx2>=2.4.0",
    "pillow>=12.0.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "torch>=2.12.0",
    "wireup>=2.0.0",
]

[project.scripts]
catdetector-api = "catdetector_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
catdetector-model = { workspace = true }
