[project]
name = "catdetector-trainer"
version = "0.1.0"
description = "Training, evaluation, and checkpoint inference package for Cat Detector."
requires-python = ">=3.14"
dependencies = [
    "efficientnet-pytorch>=0.7.1",
    "lightning>=2.6.5",
    "lightning-utilities>=0.15.3",
    "pytorch-lightning>=2.6.5",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
]

[project.scripts]
catdetector-train = "catdetector_trainer.trainer:main"
catdetector-evaluate = "catdetector_trainer.evaluate:main"
catdetector-predict = "catdetector_trainer.catdetector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
